# dependencies_generator

./: .gitignore  pyproject.toml
repository_generator/: main.py
tests/: test_main.py
