[tool.poetry]
name = "poetry-test"
version = "0.1.0"
description = ""
authors = ["satodai <banana5388@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.6"
pytest = "^6.2.4"
importlib-metadata = "^4.6.3"

[tool.poetry.dev-dependencies]
typing-extensions = "^3.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
